--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hardhat-project",
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.2",
+    "dotenv": "^16.3.1",
     "hardhat": "^2.17.0"
   },
   "devDependencies": {
