--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hardhat-project",
   "dependencies": {
+    "@oceanprotocol/lib": "^3.0.2",
     "@openzeppelin/contracts": "^4.9.2",
     "dotenv": "^16.3.1",
     "hardhat": "^2.17.0"
